Added an Image Preview

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Hurricane&family=Inter:wght@400;600;700&family=Ramaraja&family=Roboto:wght@400;700&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -69,6 +70,23 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.image-preview-container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  margin-top: 1em;
+  max-height: 200px;
+  overflow-x: hidden;
+}
+.image-preview-container .image-preview {
+  border-radius: 8px;
+  transform: 0.5s all;
+  cursor: pointer;
+}
+.image-preview-container .image-preview:hover {
+  border: 2px solid #5f6fb3;
 }
 
 /*# sourceMappingURL=main.css.map */
