--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -64,7 +64,26 @@ body {
 }
 
  
-
-
 img {width: 100%; height: 100%; object-fit: cover;}    
+
+.image-preview-container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    margin-top: 1em;
+    max-height: 200px;
+    overflow-x: hidden;
+
+    .image-preview {
+
+        border-radius: 8px;
+        transform: .5s all;
+        cursor: pointer;
+
+        &:hover {
+            border: 2px solid rgb(95, 111, 179);
+        }
+        
+    }
+}
 
